# dino-roguelike

./: CMakeLists.txt  README.md
include/: Bird.h  Cloud.h  Dinosaur.h  Dinosaur.hpp  Game.h  Game.hpp  InstructionManager.h  InstructionText.h  Obstacle.h  Obstacle.hpp  ParticleSystem.h  Sword.h  Utils.h
src/: Bird.cpp  Cloud.cpp  Dinosaur.cpp  Game.cpp  InstructionManager.cpp  InstructionText.cpp  Main.cpp  Obstacle.cpp  ParticleSystem.cpp  Sword.cpp  main.cpp
